--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style-type: none;
+}
+
 body {
   margin: 16px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -16,7 +20,6 @@ body {
 /*================================================================*/
 /* Task 2 styles */
 .gallery {
-  list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
